# mpi-app-timer

./: CMakeLists.txt
src/: mpiapptimer.cpp
